--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -72,7 +72,7 @@
                     </div>
 
                     <div class="chart-container">
-                        <div class="chart-item">
+                        <div class="chart-item">nv
                             <canvas id="lineChart" width="800" height="400"></canvas>
                         </div>
                         <div class="chart-item">
