--- a/views/addExpense.ejs
+++ b/views/addExpense.ejs
@@ -89,7 +89,7 @@
 
                             </form>
                             <!-- <div class="link">
-                                <a href="http://localhost:3000/dashboard">Go back to dashboard</a>
+                                <a href="/dashboard">Go back to dashboard</a>
                             </div> -->
                         </section>
 
