--- a/views/confirmOTP.ejs
+++ b/views/confirmOTP.ejs
@@ -42,7 +42,7 @@
 
                         <button type="submit" class="submitBtn">Verify OTP</button>
                         <div>
-                            <a href="http://localhost:3000/forgetPassword">Resend OTP</a>
+                            <a href="/forgetPassword">Resend OTP</a>
                         </div>
             </form>
         </section>
