--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,11 +21,11 @@
                 <li>Why Us</li>
                 <li>GitHub</li>
                 <li class="btnHomeli">
-                    <a href="http://localhost:3000/login">
+                    <a href="/login">
                         <button class="btn1"><strong>Login</strong></button>
                     </a>
 
-                    <a href="http://localhost:3000/Signup">
+                    <a href="/Signup">
                         <button class="btn4"><strong>Signup</strong></button>
                     </a>
                 </li>
