--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,9 +46,9 @@
 
             </form>
             <div class="link">
-                <a href="http://localhost:3000/forgetPassword">Forgot your Password? Click here to reset it.</a>
+                <a href="/forgetPassword">Forgot your Password? Click here to reset it.</a>
                 <hr>
-                <a href="http://localhost:3000/signUp">
+                <a href="/signUp">
                     <button class="btn3"><strong>create new account</strong></button>
                 </a>
             </div>
