--- a/views/register.ejs
+++ b/views/register.ejs
@@ -63,7 +63,7 @@
 
             </form>
             <div class="link">
-                <a href="http://localhost:3000/login">i already have an account</a>
+                <a href="/login">i already have an account</a>
             </div>
         </section>
 
