--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -59,7 +59,7 @@
                         <button type="submit" class="submitBtn">Reset </button>
 
                         <div>
-                            <a href="http://localhost:3000/">Go back to login</a>
+                            <a href="/">Go back to login</a>
                         </div>
 
             </form>
